terraform-aws/09-import/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "6.27.0"
    }
  }
}

provider "aws" {
  # Configuration options
}

resource "aws_vpc" "myvpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "demovpc"
  }
}

resource "aws_subnet" "mysubnet" {
  vpc_id     = aws_vpc.myvpc.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "Main"
  }
}

resource "aws_internet_gateway" "myigw" {
  vpc_id = aws_vpc.myvpc.id
}

resource "aws_route_table" "myrt" {
  vpc_id = aws_vpc.myvpc.id
}

resource "aws_route" "myroutes" {
  route_table_id         = aws_route_table.myrt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.myigw.id
}

resource "aws_route_table_association" "myrouteassociatiate" {
  subnet_id      = aws_subnet.mysubnet.id
  route_table_id = aws_route_table.myrt.id
}

resource "aws_security_group" "mysg" {
  name   = "sg"
  vpc_id = aws_vpc.myvpc.id

  ingress  {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress  {
    from_port  = 0
    to_port    = 0
    protocol   = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# resource "aws_instance" "my_ec2" {
#   ami = "ami-0ecb62995f68bb549"
#   instance_type = "t2.micro"
#   subnet_id = aws_subnet.mysubnet.id
#   key_name = "demokey"
#   vpc_security_group_ids = [aws_security_group.mysg.id]
#   associate_public_ip_address = true

#   tags = {
#     Name = "demoec2"
#     Env = "Dev"
#   }
# }





# resource "aws_instance" "myec2" {
#   ami                         = var.ec2_ami_id
#   instance_type               = var.instance_type
#   subnet_id                   = aws_subnet.mysubnet.id
#   key_name                    = "demokey"
#   vpc_security_group_ids      = [aws_security_group.mysg.id]
#   associate_public_ip_address = true
# }
